2008-07-08  vadim  <vadim@vk.crocodile.org>

	* fwcompiler.pro (LIBS): need to include -lfwbuilder while linking
	fwcompiler library on all Unix platforms because of the linker
	option  -Wl,-Bsymbolic-functions . Discovered this on Ubuntu
	Hardy where libsnmp adds this option via net-snmp-config --libs

2008-07-07  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSet.cpp (RuleSet::shallowDuplicate): Added support for
	attribute top_rule_set in class RuleSet 

	* fwbuilder.dtd.in: Added attribute "top_rule_set" to Policy, NAT
	and Routing elements

2008-07-06  Vadim Kurland  <vadim@vk.crocodile.org>

	* RuleSet.cpp (RuleSet::fromXML): added support for attribute
	ipv6_rule_set in class RuleSet

	* fwbuilder.dtd.in: Added attribute "ipv6_rule_set" to elements
	Policy, NAT and Routing

2008-07-05  Vadim Kurland  <vadim@vk.crocodile.org>

	* Compiler_ops.cpp (fwcompiler::checkForShadowing): taking into
	account attributes "tos" and "dscp" while considering IPService
	objects for shadowing.

	* fwbuilder.dtd.in: Added attributes for TOS and DSCP codes to
	IPService xml element

2008-07-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* InterfaceData.h (libfwbuilder): InterfaceData moved from
	fwbuilder to libfwbuilder; using InterfaceData in snmp crawler
	instead of creating temporary Interface objects.

2008-07-01  Vadim Kurland  <vadim@vk.crocodile.org>

	* ICMP6Service.cpp (ICMP6Service::ICMP6Service): Added class
	ICMP6Service

	* fwbuilder.dtd.in: Added XML element ICMP6Service

2008-06-28  Vadim Kurland  <vadim@vk.crocodile.org>

	* dns.cpp (DNS::getHostByAddr): class DNS has been radically
	simplified. Hard to support functions to get NS records and DNS
	zone tranfer have been removed. This class now only provides
	convenience wrappers around gethostbyname2 and gethostbyaddr
	functions. Wrapper functions now accept parameter that defines
	address family type (AF_INET or AF_INET6).

	* configure.in (HAVE_GOODLIBRESOLV): remove checks for thread-safe